# docs

./: .codespellrc  .gitignore  .lycheecache  .pymarkdown  README.md  Taskfile.yml  generate_docs.py  lychee.toml
.github/ISSUE_TEMPLATE/: issue.yml
.github/scripts/: collect_org_stats.py  collect_pypi_stats_full.py  fetch_ga4.py  process_visits.py  requirements.txt  scrape_ghcr_downloads_playwright.py  test-tracking-flow.sh  test-tracking-simple.sh  test-tracking.js  validate_visit_data.py
.github/workflows/: cicd.yml  docs-release.yml  ga4-daily.yml  links.yml  org-stats.yml  pr-links.yml  process-visits-secure.yml  process-visits.yml  reusable-docs.yml  smoke-test-links.yml
.shared-config/: README.md  Taskfile.yml  install.sh  requirements-agntcy-docs-theme.txt
.shared-config/docs-stub/: getting-started.md  index.md
.shared-config/mkdocs/: mkdocs.starter.yml  mkdocs.template.yml
docs/: .index  conf.py  contributing.md  glossary.md  index.md  index.rst  requirements.txt
docs/agws/: .index  workflow-server-manager.md  workflow-server.md  workflow_server_manager.md
docs/coffee-agntcy/: .index  get-started.md  identity-coffee-agntcy.md  slim-coffee-agntcy.md
docs/csit/: csit.md  test_plan.md
docs/dir/: .index  ads-records.md  agent-directory.md  architecture.md  core-concepts.md  deployment.md  dir-api-ref.md  dir-api-reference.md  dir-api.md  dir-architecture.md  dir-cli-guide.md  dir-cli-reference.md  dir-component-event-streaming.md  dir-component-gui.md  dir-component-mcp-server.md  dir-component-oidc-authentication.md  dir-sdk.md  (+55 more)
mkdocs/: README.md  gen_proto_docs.py  hooks.py  main.py  mike_versions.ini  mkdocs.yml  pyproject.toml
mkdocs/overrides/: 404.html
schema/: oasf-data-model.proto
(+205 files in other folders)
