[project]
name = "agntcy-docs"
version = "0.1.0"
description = "Agntcy documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material==9.6.12",
    "mkdocs-exclude==1.0.2",
    "mkdocs-awesome-pages-plugin==2.10.1",
    "markdown>=3.2",
    "mkdocs>=1.3.0",
    "mkdocs-material-extensions>=1.0.3",
    "mkdocs-autorefs==1.4.1",
    "pygments>=2.20.0",
    "pymdown-extensions>=10.21.3",
    "mkdocs-git-revision-date-plugin==0.3.2",
    "mkdocstrings-python==1.16.10",
    "griffe-pydantic==1.1.4",
    "griffe==1.7.2",
    "agntcy-acp>=1.5.2",  # 1.5.x allows langgraph 0.4+ so we can use langgraph-checkpoint>=3.0
    "agntcy-iomapper>=0.2.3",
    "langgraph-checkpoint>=4.1.1",  # JsonPlusSerializer RCE in "json" mode
    "llama-index>=0.14.22,<0.15",
    "llama-index-core>=0.14.22,<0.15",
    "pypdf>=6.13.3",  # CVE-2026-*: decompression-bomb / RAM exhaustion in PDF parsing
    "nltk>=3.9.4",  # CVE-2025-14009: zip slip / RCE in downloader
    "orjson>=3.11.6",  # CVE-2025-67221: recursion limit for deeply nested JSON
    "pillow>=12.2.0",  # CVE-2025-48379, CVE-2026-25990
    "beautifulsoup4>=4.13.3",
    "mkdocs-swagger-ui-tag==0.7.1",
    "mkdocs-include-markdown-plugin>=7.2.0",
    "mkdocs-redirects>=1.2.0",
    # Linting and testing tools
    "codespell>=2.2.0",
    "pymarkdownlnt>=0.9.0",
    "mkdocs-htmlproofer-plugin>=1.0.0",
    "certifi>=2025.1.31",
]

[tool.uv]
override-dependencies = [
    # agntcy-iomapper 0.2.x still declares llama-index<0.13; override for pypdf>=6.10.2
    "llama-index>=0.14.22,<0.15",
    "llama-index-core>=0.14.22,<0.15",
]
